ci workaround